--- a/Interface_Layer/Interface_Layer.csproj
+++ b/Interface_Layer/Interface_Layer.csproj
@@ -70,6 +70,7 @@
     <Content Include="Angular\Controllers\opcionCtrl.js" />
     <Content Include="Angular\Controllers\perfilCtrl.js" />
     <Content Include="Angular\Controllers\perfilusuariorolCtrl.js" />
+    <Content Include="Angular\Controllers\permisoCtrl.js" />
     <Content Include="Angular\Controllers\sistemaperfilCtrl.js" />
     <Content Include="Angular\myApp.js" />
     <Content Include="login\authenticate.html" />
@@ -134,6 +135,7 @@
     <Content Include="Views\Opciones.html" />
     <Content Include="Views\Perfiles.html" />
     <Content Include="Views\PerfilesUsuariosRoles.html" />
+    <Content Include="Views\Permisos.html" />
     <Content Include="Views\Personas.html" />
     <Content Include="Views\Roles.html" />
     <Content Include="Views\Sistemas.html" />
