--- a/Interface_Layer/Interface_Layer.csproj
+++ b/Interface_Layer/Interface_Layer.csproj
@@ -76,6 +76,14 @@
     <Content Include="Angular\Factories\menuopcionFctr.js" />
     <Content Include="Angular\Factories\moduloFctr.js" />
     <Content Include="Angular\Factories\opcionFctr.js" />
+    <Content Include="Angular\Factories\perfilFctr.js" />
+    <Content Include="Angular\Factories\perfilusuariorolFctr.js" />
+    <Content Include="Angular\Factories\permisoFctr.js" />
+    <Content Include="Angular\Factories\personaFctr.js" />
+    <Content Include="Angular\Factories\rolFctr.js" />
+    <Content Include="Angular\Factories\sistemaperfilFctr.js" />
+    <Content Include="Angular\Factories\ubigeoFctr.js" />
+    <Content Include="Angular\Factories\usuarioFctr.js" />
     <Content Include="Angular\myApp.js" />
     <Content Include="Angular\Factories\sistemaFctr.js" />
     <Content Include="login\authenticate.html" />
