--- a/Interface_Layer_API/Interface_Layer_API.csproj
+++ b/Interface_Layer_API/Interface_Layer_API.csproj
@@ -151,10 +151,13 @@
     <Compile Include="Controllers\RolController.cs" />
     <Compile Include="Controllers\SistemaController.cs" />
     <Compile Include="Controllers\SistemaPerfilController.cs" />
+    <Compile Include="Controllers\UbigeoController.cs" />
     <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DistritoRequest.cs" />
+    <Compile Include="Models\ProvinciaRequest.cs" />
     <Compile Include="MyAuthorizationServerProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -171,7 +174,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Business_Layer\Business_Layer.csproj">
