--- a/Interface_Layer_API/Web.config
+++ b/Interface_Layer_API/Web.config
@@ -10,6 +10,11 @@
     <add key="PreserveLoginUrl" value="true"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="WCFPath" value="http://localhost:55291/"/>
+    <!--<add key="WCFPath_LocalSandbox" value="http://localhost:55291/"/>-->
+    <!--<add key="WCFPath_IIS" value="http://localhost/WS_MidisSeguridadDOF/"/>-->
+    <!--<add key="WCFPath_QA" value="http://app_pruebas.midis.gob.pe/Service_Layer/"/>-->
+    <add key="UbigeoServicePath" value="http://192.168.64.19:7070/SistemaS100/"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
