--- a/Service_Layer/Web.config
+++ b/Service_Layer/Web.config
@@ -1,21 +1,28 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+    <section name="oracle.manageddataaccess.client"
+      type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
   </configSections>
   
   <connectionStrings>
-    <add name="DBMIDIS" connectionString="Data Source=XE;User ID=ES_SEGURIDAD;Password=midis2017;pooling=true;min pool size=5;Max Pool Size=60" providerName="Oracle.DataAccess.Client"/>
+    <add name="DBMIDIS"
+      connectionString="Data Source=(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = 10.10.40.22)(PORT = 1521))(CONNECT_DATA =(SERVER = DEDICATED)(SERVICE_NAME = dbsisfoh)));User ID=DESA01;Password=oracle;pooling=true;min pool size=5;Max Pool Size=60"
+      providerName="Oracle.DataAccess.Client"/>
+    <!--<add name="DBMIDIS_LOCAL" connectionString="Data Source=XE;User ID=ES_SEGURIDAD;Password=midis2017;pooling=true;min pool size=5;Max Pool Size=60" providerName="Oracle.DataAccess.Client"/>-->
+    <!--<add name="DBMIDIS_DESA01" connectionString="Data Source=DBSISFOH;User ID=DESA01;Password=oracle;pooling=true;min pool size=5;Max Pool Size=60" providerName="Oracle.DataAccess.Client"/>-->
+    <!--<add name="DBMIDIS_DESA01" connectionString="Data Source=(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = 10.10.40.22)(PORT = 1521))(CONNECT_DATA =(SERVER = DEDICATED)(SERVICE_NAME = dbsisfoh)));User ID=DESA01;Password=oracle;pooling=true;min pool size=5;Max Pool Size=60" providerName="Oracle.DataAccess.Client"/>-->
   </connectionStrings>
 
   <log4net>
     <appender name="LogInfoAppender" type="log4net.Appender.RollingFileAppender">
-      <file type="log4net.Util.PatternString" value="E:\proyectos\RNU\log\SlnSeguridad_Service_Layer(debug)-%date{yyyyMMdd}.log" />
-      <appendToFile value="true" />
-      <rollingStyle value="Date" />
-      <datePattern value="yyyyMMdd" />
+      <file type="log4net.Util.PatternString" value="E:\proyectos\RNU\log\SlnSeguridad_Service_Layer(debug)-%date{yyyyMMdd}.log"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Date"/>
+      <datePattern value="yyyyMMdd"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger – %message%newline" />
+        <conversionPattern value="%date [%thread] %-5level %logger – %message%newline"/>
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
         <levelMin value="INFO"/>
@@ -23,12 +30,12 @@
       </filter>
     </appender>
     <appender name="LogErrorAppender" type="log4net.Appender.RollingFileAppender">
-      <file type="log4net.Util.PatternString" value="E:\proyectos\RNU\log\SlnSeguridad_Service_Layer(error)-%date{yyyyMMdd}.log" />
-      <appendToFile value="true" />
-      <rollingStyle value="Date" />
-      <datePattern value="yyyyMMdd" />
+      <file type="log4net.Util.PatternString" value="E:\proyectos\RNU\log\SlnSeguridad_Service_Layer(error)-%date{yyyyMMdd}.log"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Date"/>
+      <datePattern value="yyyyMMdd"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger – %message%newline" />
+        <conversionPattern value="%date [%thread] %-5level %logger – %message%newline"/>
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
         <levelMin value="WARN"/>
@@ -36,7 +43,7 @@
       </filter>
     </appender>
     <root>
-      <level value="DEBUG" />
+      <level value="DEBUG"/>
       <level value="ALL"/>
       <appender-ref ref="LogInfoAppender"/>
       <appender-ref ref="LogErrorAppender"/>
@@ -61,35 +68,34 @@
   <system.serviceModel>
     <extensions>
       <behaviorExtensions>
-        <add name="crossOriginResourceSharingBehavior"
-          type="Service_Layer.Services.CORSEnablingBehavior, Service_Layer, Version=1.0.0.0, Culture=neutral" />
+        <add name="crossOriginResourceSharingBehavior" type="Service_Layer.Services.CORSEnablingBehavior, Service_Layer, Version=1.0.0.0, Culture=neutral"/>
       </behaviorExtensions>
     </extensions>
     
     <services>
       <service behaviorConfiguration="serviceBehavior" name="Service_Layer.Services.SSistemasServices">
-        <endpoint address="" behaviorConfiguration="web" binding="webHttpBinding" contract="Service_Layer.Services.ISSistemasServices" />
+        <endpoint address="" behaviorConfiguration="web" binding="webHttpBinding" contract="Service_Layer.Services.ISSistemasServices"/>
       </service>
       <service behaviorConfiguration="serviceBehavior" name="Service_Layer.Services.SPersonasService">
-        <endpoint address="" behaviorConfiguration="web" binding="webHttpBinding" contract="Service_Layer.Services.ISPersonasService" />
+        <endpoint address="" behaviorConfiguration="web" binding="webHttpBinding" contract="Service_Layer.Services.ISPersonasService"/>
       </service>
     </services>
     
     <behaviors>
       <endpointBehaviors>
         <behavior name="web">
-          <webHttp helpEnabled="true"  automaticFormatSelectionEnabled="true" defaultOutgoingResponseFormat="Json" />
-          <crossOriginResourceSharingBehavior />
+          <webHttp helpEnabled="true" automaticFormatSelectionEnabled="true" defaultOutgoingResponseFormat="Json"/>
+          <crossOriginResourceSharingBehavior/>
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
         <behavior name="serviceBehavior">
-          <serviceMetadata httpGetEnabled="false" />
-          <serviceDebug includeExceptionDetailInFaults="true" />
+          <serviceMetadata httpGetEnabled="false"/>
+          <serviceDebug includeExceptionDetailInFaults="true"/>
         </behavior>
         <behavior name="">
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="false" />
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
+          <serviceDebug includeExceptionDetailInFaults="false"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
@@ -105,10 +111,11 @@
       <webHttpBinding>
         <binding name="Binding" crossDomainScriptAccessEnabled="true" maxReceivedMessageSize="52428800" maxBufferPoolSize="52428800" useDefaultWebProxy="false">
           <security mode="Transport">
-            <transport clientCredentialType="None" />
+            <transport clientCredentialType="None"/>
           </security>
         </binding>
-        <binding name="httpbind" crossDomainScriptAccessEnabled="true" maxReceivedMessageSize="52428800" maxBufferPoolSize="52428800" useDefaultWebProxy="false">
+        <binding name="httpbind" crossDomainScriptAccessEnabled="true" maxReceivedMessageSize="52428800" maxBufferPoolSize="52428800"
+          useDefaultWebProxy="false">
         </binding>
       </webHttpBinding>
     </bindings>
@@ -118,4 +125,26 @@
     <directoryBrowse enabled="true"/>
     <validation validateIntegratedModeConfiguration="false"/>
   </system.webServer>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="Oracle.ManagedDataAccess.Client"/>
+      <add name="ODP.NET, Managed Driver" invariant="Oracle.ManagedDataAccess.Client" description="Oracle Data Provider for .NET, Managed Driver"
+        type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
+    </DbProviderFactories>
+  </system.data>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <publisherPolicy apply="no"/>
+        <assemblyIdentity name="Oracle.ManagedDataAccess" publicKeyToken="89b483f429c47342" culture="neutral"/>
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+  <oracle.manageddataaccess.client>
+    <version number="*">
+      <dataSources>
+        <dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) "/>
+      </dataSources>
+    </version>
+  </oracle.manageddataaccess.client>
 </configuration>
