--- a/Entity_Layer/Entity_Layer.csproj
+++ b/Entity_Layer/Entity_Layer.csproj
@@ -13,7 +13,7 @@
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -51,6 +51,8 @@
     <Compile Include="Entities\Sistemas\EModulo.cs" />
     <Compile Include="Entities\Sistemas\EOpcion.cs" />
     <Compile Include="Entities\Sistemas\ESistema.cs" />
+    <Compile Include="Entities\Vistas\EVistaPermiso.cs" />
+    <Compile Include="Mappings\Vistas\EVistaPermisoMapping.cs" />
     <Compile Include="Mappings\Personas\EPerfilMapping.cs" />
     <Compile Include="Mappings\Personas\EPerfilUsuarioRolMapping.cs" />
     <Compile Include="Mappings\Personas\EPermisoMapping.cs" />
