--- a/Service_Layer/packages.config
+++ b/Service_Layer/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="5.2.0" targetFramework="net45" />
+  <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
   <package id="log4net" version="2.0.7" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net45" />
@@ -9,4 +10,6 @@
   <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net45" />
+  <package id="NHibernate" version="4.1.1.4000" targetFramework="net45" />
+  <package id="Oracle.ManagedDataAccess" version="12.1.24160719" targetFramework="net45" />
 </packages>
