--- a/Interface_Layer_API/Web.config
+++ b/Interface_Layer_API/Web.config
@@ -10,7 +10,7 @@
     <add key="PreserveLoginUrl" value="true"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-    <add key="WCFPath" value="http://localhost:55291/"/>
+    <add key="WCFPath" value="http://localhost/WS_MidisSeguridadDOF/"/>
     <!--<add key="WCFPath_LocalSandbox" value="http://localhost:55291/"/>-->
     <!--<add key="WCFPath_IIS" value="http://localhost/WS_MidisSeguridadDOF/"/>-->
     <!--<add key="WCFPath_QA" value="http://app_pruebas.midis.gob.pe/Service_Layer/"/>-->
@@ -26,7 +26,7 @@
         <add namespace="System.Web.Mvc.Ajax"/>
         <add namespace="System.Web.Mvc.Html"/>
         <add namespace="System.Web.Routing"/>
-        <add namespace="System.Web.WebPages"/>
+        <add namespace="System.Web.WebPages"/>9
       </namespaces>     
     </pages>
   </system.web>
