--- a/Service_Layer/Service_Layer.csproj
+++ b/Service_Layer/Service_Layer.csproj
@@ -64,6 +64,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel">
       <Private>True</Private>
@@ -71,6 +72,7 @@
     <Reference Include="System.ServiceModel.Web">
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Services\SPersonasService.svc" />
@@ -113,7 +115,12 @@
     <Compile Include="Models\Vistas\UsuarioUPResponse.cs" />
     <Compile Include="Models\Vistas\AcreditacionUPSRequest.cs" />
     <Compile Include="Models\Vistas\AcreditacionUPSResponse.cs" />
+    <Compile Include="Models\Vistas\UsuarioURequest.cs" />
+    <Compile Include="Models\Vistas\VistaMenuModel.cs" />
+    <Compile Include="Models\Vistas\VistaModuloModel.cs" />
+    <Compile Include="Models\Vistas\VistaOpcionModel.cs" />
     <Compile Include="Models\Vistas\VistaPermisoModel.cs" />
+    <Compile Include="Models\Vistas\VistaSistemaModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CORSEnablingBehavior.cs" />
     <Compile Include="Services\ISPersonasService.cs" />
