--- a/Interface_Layer_API/Web.config
+++ b/Interface_Layer_API/Web.config
@@ -10,7 +10,7 @@
     <add key="PreserveLoginUrl" value="true"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-    <add key="WCFPath" value="http://localhost/WS_MidisSeguridadDOF/" />
+    <add key="WCFPath" value="http://localhost:7070/" />
     <!--<add key="WCFPath_Local" value="http://localhost:7070/" />-->
     <!--<add key="WCFPath_DEV" value="http://localhost/WS_MidisSeguridadDOF/" />-->
     <!--<add key="WCFPath_QA" value="http://app_pruebas.midis.gob.pe/WS_MidisSeguridadDOF/" />-->
