--- a/Service_Layer/Web.config
+++ b/Service_Layer/Web.config
@@ -61,15 +61,15 @@
 
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
-    <add key="WebPath" value="http://localhost/MidisSeguridadDOF/Index.html#!/" />
+    <add key="WebPath" value="http://localhost:57527/Index.html#!/" />
     <!--<add key="WebPath_Local" value="http://localhost:57527/Index.html#!/" />-->
     <!--<add key="WebPath_DEV" value="http://localhost/MidisSeguridadDOF/Index.html#!/" />-->
     <!--<add key="WebPath_QA" value="http://app_pruebas.midis.gob.pe/MidisSeguridadDOF/Index.html#!/" />-->
     <!--<add key="WebPath_PROD" value="http://sdv.midis.gob.pe/MidisSeguridadDOF/Index.html#!/" />-->
     <!--<add key="WebPath_PROD" value="https://10.10.20.35/MidisSeguridadDOF/Index.html#!/" />-->
     <add key="Schema" value="DESA01" />
-    <!--<add key="Schema_DESA01" value="DESA01" />-->
-    <!--<add key="Schema_IDOSEGUSUARIO" value="IDOSEGUSUARIO" />-->
+    <!--<add key="Schema_DESA01" value="DESA01" />DESARROLLO-->
+    <!--<add key="Schema_IDOSEGUSUARIO" value="IDOSEGUSUARIO" />PRODUCCION-->
   </appSettings>
   
   <system.web>
