--- a/Interface_Layer_API/Web.config
+++ b/Interface_Layer_API/Web.config
@@ -10,12 +10,11 @@
     <add key="PreserveLoginUrl" value="true"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-    <add key="WCFPath" value="http://localhost:7070/" />
+    <add key="WCFPath" value="http://app_pruebas.midis.gob.pe/WS_MidisSeguridadDOF/" />
     <!--<add key="WCFPath_Local" value="http://localhost:7070/" />-->
     <!--<add key="WCFPath_DEV" value="http://localhost/WS_MidisSeguridadDOF/" />-->
     <!--<add key="WCFPath_QA" value="http://app_pruebas.midis.gob.pe/WS_MidisSeguridadDOF/" />-->
     <!--<add key="WCFPath_PROD" value="http://sdv.midis.gob.pe/WS_MidisSeguridadDOF/" />-->
-    <!--<add key="WCFPath_PROD" value="https://10.10.20.35/WS_MidisSeguridadDOF/" />-->
     <add key="UbigeoServicePath" value="http://200.48.102.17:28080/SistemaS100/" />
     <!--<add key="UbigeoServicePath_DEV" value="http://192.168.64.19:7070/SistemaS100/" />-->
     <!--<add key="UbigeoServicePath_PROD" value="http://200.48.102.17:28080/SistemaS100/" />-->
